<resources>
    <string name="app_name">SchuldenApp</string>
    <string name="value">Betrag</string>
    <string name="creditor">Kreditor</string>
    <string name="debtor">Debitor</string>
    <string name="details">Details</string>
    <string name="using">Verwendung</string>
    <string name="pay">Bezahlen</string>
    <string name="ok">OK</string>
    <string name="confirm">Bestätigen</string>
    <string name="cancel">Abbrechen</string>
    <string name="read">Gelesen</string>
    <string name="debtApp">Schuldenapp</string>
    <string name="iAm">Ich bin</string>
    <string name="userdata">Ihre Daten</string>
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="firstnamePartner">Vorname Partner</string>
    <string name="lastnamePartner">Nachname Partner</string>
    <string name="ibanPartner">IBAN von Partner</string>
    <string name="chooseDate">Datum auswählen</string>
    <string name="iban">IBAN</string>
    <string name="bic">BIC</string>
    <string name="bicOptional">BIC von Partner (optional)</string>
    <string name="email">E-Mail</string>
    <string name="view">View</string>
    <string name="newDebt">Neue Schuld</string>
    <string name="settings">Einstellungen</string>
    <string name="archive">Archiv</string>
    <string name="qrCodeScanner">QR-Code Scanner</string>
    <string name="chooseMethodToTransferDebt">Wählen Sie eine Methode, eine neue Schuld zu übertragen:</string>
    <string name="manualInput">Manuelle Eingabe</string>
    <string name="nfc">NFC</string>
    <string name="generateQrCode">QR Code generieren</string>
    <string name="otherMethods">Andere Methoden</string>
    <string name="chooseQrCodeType">Wählen sie, ob sie einen QR-Code zum Teilen an eine andere Schuldenapp oder zum Bezahlen im STUZZA Standard erstellen wollen</string>
    <string name="shareYourTransactionInformation">Teilen Sie Ihre Bezahlinformation als QR-Code.</string>
    <string name="scanYourDataWithOtherSmartphone">Scannen Sie mit einem anderen Smartphone diese Daten ab</string>
    <string name="date">Datum</string>
    <string name="name">Name</string>
    <string name="debtorOrCreditor">Debitor oder Kreditor</string>
    <string name="holdTogetherYourSmartphones">Halten Sie jetzt Ihre Smartphones zusammen</string>
    <string name="deleteEntry">Eintrag Löschen</string>
    <string name="shareBankDataWithQr">Bankdaten mit QR-Code übertragen</string>
    <string name="openPayApp">BezahlApp aufrufen</string>
    <string name="enterYourFirstname">Geben Sie Ihren Vornamen ein</string>
    <string name="enterYourLastname">Geben Sie Ihren Nachnamen ein</string>
    <string name="enterYourIban">Geben Sie Ihren IBAN ein</string>
    <string name="enterYourBic">Geben Sie Ihren BIC ein</string>
    <string name="iOwe">Ich schulde</string>
    <string name="owesMe">Mir schuldet</string>
</resources>
