<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/userdata"
        android:key="pref_userdata">
        <EditTextPreference
            android:key="pref_userdata_firstname"
            android:summary="@string/enterYourFirstname"
            android:title="@string/firstname" />
        <EditTextPreference
            android:key="pref_userdata_lastname"
            android:summary="@string/enterYourLastname"
            android:title="@string/lastname" />
        <EditTextPreference
            android:key="pref_userdata_iban"
            android:summary="@string/enterYourIban"
            android:title="@string/iban" />
        <EditTextPreference
            android:key="pref_userdata_bic"
            android:summary="@string/enterYourBic"
            android:title="@string/bic" />
        <!--<EditTextPreference
            android:defaultValue="duschek54321@gmail.com"
            android:key="pref_userdata_email"
            android:summary="Geben Sie Ihre E-Mail Adresse ein"
            android:title="@string/email" />-->
    </PreferenceCategory>
</PreferenceScreen>