<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/option_menu_new_entry"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        android:title="@string/newDebt"/>

    <item
        android:id="@+id/option_menu_qr_scanner"
        android:title="@string/qrCodeScanner"/>

    <item
        android:id="@+id/option_menu_qr_code_bank_details"
        android:title="@string/shareBankDataWithQr"/>

    <item
        android:id="@+id/option_menu_archive"
        android:title="@string/archive"/>

    <item
        android:id="@+id/option_menu_open_payapp"
        android:title="@string/openPayApp" />

    <item
        android:id="@+id/option_menu_preferences"
        android:title="@string/settings"/>
</menu>