<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.htlgkr.raiffeisenprojektteam.schuldenapp.DetailActivity">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="11dp">

        <TextView
            android:id="@+id/textViewIamThe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iAm" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroupCreditorDebtor">
            <RadioButton android:id="@+id/radioButtonCreditor"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creditor"
                android:onClick="onRadioButtonClicked" />
            <RadioButton android:id="@+id/radioButtonDebtor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debtor"
                android:onClick="onRadioButtonClicked" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value" />

        <EditText
            android:id="@+id/editTextValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textViewUsuage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/using" />

        <EditText
            android:id="@+id/editTextUsuage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayoutPartnerData">

            <TextView
                android:id="@+id/tvIban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ibanPartner" />

            <EditText
                android:id="@+id/editTextIban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvBic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bicOptional" />

            <EditText
                android:id="@+id/editTextBic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <LinearLayout
                android:id="@+id/linearLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/firstnamePartner"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/lastnamePartner"
                    android:inputType="textPersonName" />

            </LinearLayout>

        </LinearLayout>


        <!--<EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmailAdress"
            android:layout_weight="1"
            android:hint="E-Mail Adresse Schuldner" />

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/calendarView"
            />-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chooseDate"
            android:id="@+id/buttonSelectDate"
            android:onClick="onButtonPressed"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDate"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:orientation="horizontal">

            <!--<TextView
                android:text="Status: "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewStatus"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:text="@string/chooseMethodToTransferDebt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCreateLoanDescription" />

            <Button
                android:id="@+id/buttonManualInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manualInput"
                android:onClick="onButtonPressed"
                android:visibility="visible"
                style="@style/Widget.AppCompat.Button.Colored" />

            <!--<Button
                android:text="Bluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonBluetooth"
                android:onClick="onButtonPressed"
                android:visibility="visible"
                style="@style/Widget.AppCompat.Button.Colored" />-->

            <Button
                android:text="@string/nfc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonNfc"
                android:onClick="onButtonPressed"
                android:visibility="visible"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:text="@string/generateQrCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonGenerateQrCode"
                android:onClick="onButtonPressed"
                android:visibility="visible"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:text="@string/otherMethods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonOther"
                android:onClick="onButtonPressed"
                android:visibility="visible"
                style="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:text="@string/pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonPayDebt"
                android:onClick="onButtonPressed"
                android:visibility="visible"
                style="@style/Widget.AppCompat.Button.Colored" />
            <Button
                android:text="@string/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonConfirmPayment"
                android:onClick="onButtonPressed"
                android:visibility="visible"
                style="@style/Widget.AppCompat.Button.Colored" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
