<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="at.htlgkr.raiffeisenprojektteam.schuldenapp.DetailActivity">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textViewSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value" />

    <EditText
        android:id="@+id/editTextSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textViewUsuage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/using" />

    <EditText
        android:id="@+id/editTextUsuage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvIban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iban" />

    <EditText
        android:id="@+id/editTextIban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- <TextView
             android:text="Vorname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tvFirstname"
             android:layout_weight="1"/>
        -->

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Vorname Schuldner"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Nachname Schuldner"
            android:inputType="textPersonName" />

    </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:context="at.htlgkr.raiffeisenprojektteam.schuldenapp.CreateLoanFragment"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:text="Wählen Sie eine Methode, eine neue Schuld zu übertragen:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCreateLoanDescription" />

            <Button
                android:text="Bluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonBluetooth"
                android:onClick="onButtonPressed" />

            <Button
                android:text="NFC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonNfc"
                android:onClick="onButtonPressed" />


            <Button
                android:text="Andere Methoden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonOther"
                android:onClick="onButtonPressed" />

        </LinearLayout>

    <Button
        android:id="@+id/btnManualInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Manuelle Eingabe"
        android:textStyle="italic" />

</LinearLayout>
